<resources>
    <string name="premium">Premium:</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="title_dialog">Like this app?</string>
    <string name="join_group">Join VK MS Group</string>
    <string name="join_group_summary">You\'ll receive updates, new music, and other sweets into your VK feed!</string>
    <string name="join_group_success">Thank you, you are successfully joined VK MS group</string>
    <string name="review">Review on GPlay!</string>
    <string name="review_summary">you will make an invaluable contribution to the development of the project!</string>
    <string name="buy_title_dialog">VK Music Sync\n7-day trial is ended :(</string>
    <string name="buy">Buy this app via GPlay!</string>
    <string name="buy_summary">By buying you\'ll support the development of the project and will get a working version of the app for ever, for all devices</string>
    <string name="contact_developer">Contact with developer</string>
    <string name="contact_developer_summary">Contact with developer to get premiuim status by other ways</string>
    <string name="clickable_string">by clicking next, you agree with [agreement]</string>
    <string name="agreement_top">Agreement:</string>
    <string name="intro_agreement">VK Music Sync application provides access only to the service of audio VK, We do not store music on their own servers. Rightholders ask about removing music from accessing apply directly to the administration site vk.com. The application programmer can change the way you distribute the application to the free version. With free distribution model application, users have bought the full version can be recruited in the sponsored group VK</string>
    <string name="intro_welcome">Welcome to \nVK Music Sync</string>
    <string name="intro_signin">Sign in with VK</string>
    <string name="intro_user_personal_welcome">Hi, %s!</string>
    <string name="intro_user_personal_welcome_2">We are glad to see you here. With this app you can instantly and automatically sync your music on device with your VK account.\nLet ask few bases questions before we start.</string>
    <string name="intro_directory_question">Where you want download music?</string>
    <string name="intro_size_question">What you think about maximum music library folder size ?</string>
    <string name="intro_size_1">1 Gb</string>
    <string name="intro_size_2">2 Gb</string>
    <string name="intro_size_4">4 Gb</string>
    <string name="intro_size_8">8 Gb</string>
    <string name="intro_size_16">16 Gb</string>
    <string name="intro_size_0">Unlimited</string>
    <string name="intro_what_todo_sized">Okay, and what we should do when your download directory reached %s size, or phones storage space ends?</string>
    <string name="intro_what_todo_unlimited">Okay, and what we should do when phones storage space ends?</string>
    <string name="intro_what_todo_1">Delete old music until there is the right space for a new download</string>
    <string name="intro_what_todo_2">Nothiing. Stop download, notify me, and I\'ll clean download directory or external storage by myself</string>
    <string name="intro_almost_done">Almost done!</string>
    <string name="intro_aus_question">Do you want to enable automatic synchronization with your main music list?</string>
    <string name="intro_aus_question_help">With this feature all new added music since this moment will be automatically downloaded right into your phone, and additionally music will be deleted if you delete it on your page</string>
    <string name="intro_aus_frequency">With which frequency check music list?</string>
    <string name="intro_next">Next</string>
    <string name="intro_okay">Okay</string>
    <string name="intro_back">Back</string>
    <string name="intro_start">Start!</string>
    <string name="about_version">1.0 Release</string>
    <string name="about_developer">Developer</string>
    <string name="contacts_vk_1">Roman Gaitaev</string>
    <string name="contacts_vk_2">vk.com/romzesrover</string>
    <string name="contacts_vk_url">http://vk.com/romzesrover</string>
    <string name="contacts_gmail_1">Gmail</string>
    <string name="contacts_gmail_2">romzesrover@gmail.com</string>
    <string name="contacts_gmail_url">mailto:romzesrover@gmail.com</string>
    <string name="open_source_base">Open source project!</string>
    <string name="open_source_base_1">GitHub</string>
    <string name="open_source_base_2">github.com/RomzesRover/VK-Audio-Sync</string>
    <string name="open_source_base_url">https://github.com/RomzesRover/VK-Audio-Sync</string>
    <string name="group_vk_1">VK app community</string>
    <string name="group_vk_2">vk.com/vkmusicsyncandroid</string>
    <string name="group_vk_url">http://vk.com/club87972116</string>
    <string name="error_message">Check your connection and try again.</string>
    <string name="error_message_audio_disabled_user_wall">Audio seems been disabled on this wall, try check main page of this user.</string>
    <string name="error_message_audio_disabled_user_main">Audio seems been disabled on this page, try check wall of this user.</string>
    <string name="error_message_audio_disabled_group_wall">Audio seems been disabled on this wall, try check main page of this community.</string>
    <string name="error_message_audio_disabled_group_main">Audio seems been disabled on this page, try check wall of this community.</string>
    <string name="error_message_zero_count_audio_user_wall">Here basically no songs, try check main page of this user.</string>
    <string name="error_message_zero_count_audio_user_main">Here basically no songs, try check wall of this user.</string>
    <string name="error_message_zero_count_audio_group_wall">Here basically no songs, try check main page of this community.</string>
    <string name="error_message_zero_count_audio_group_main">Here basically no songs, try check wall of this community.</string>
    <string name="message_zero_count_audio_dm">Here basically no songs, try add songs to download manager from own list, friends, and communities or their walls.</string>
    <string name="error_retry">Retry</string>
    <string name="of">of</string>
    <string name="dm_inprogrees">Download in progress.</string>
    <string name="dm_inprogrees_cover">Download is complete, sett up cover art and fix tags.</string>
    <string name="app_name">VK Music Sync</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quan_songs_main">Songs in main list:</string>
    <string name="quan_songs_wall">Songs on wall:</string>
    <string name="quan_songs_dm">Songs in dm list:</string>
    <string name="quan_people">People:</string>
    <string name="quan_groups">Communities:</string>
    <string name="download_selected">Download selected</string>
    <string name="app_slogan">Sync automatically,\nanywhere,\nanytime,\nwith all cover art!</string>
    <string name="service_running">Download service is in work state, please wait till download is continue!</string>
    <string name="downloading">Downloading</string>
    <string name="account">Account</string>
    <string name="logout">Log out</string>
    <string name="imageloader">Image Loader</string>
    <string name="imageloader_pause_scroll">Pause on scroll</string>
    <string name="imageloader_pause_scroll_summary">Disabling may make lists more laggy</string>
    <string name="imageloader_pause_fling">Pause on fling</string>
    <string name="imageloader_pause_fling_summary">Disabling may make lists more laggy</string>
    <string name="imageloader_clear_cache">Clear cache</string>
    <string name="imageloader_clear_cache_success">Image cache successfully cleared!</string>
    <string name="download_direcotry">Download directory</string>
    <string name="moreover">moreover</string>
    <string name="main">Main music</string>
    <string name="check_all">Check first ..</string>
    <string name="ok">OK</string>
    <string name="delete_all">Delete all</string>
    <string name="wait_check">Wait till we check and add to dm your songs..</string>
    <string name="wait_uncheck">Wait till we uncheck and delete from dm checked songs..</string>
    <string name="cancel">Cancel</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="stop_dm">Stop downloading</string>
    <string name="stop_dm_msg">Downloading isn\'t started to stop it</string>
    <string name="delete_all_msg">List is already empty</string>
    <string name="no_free_space">No more free space available.</string>
    <string name="no_free_space_msg">Clean storage and try again.</string>
    <string name="no_free_space_user_msg">Clean download directory and try again.</string>
    <string name="no_conn">No internet connection available.</string>
    <string name="no_conn_msg">Check your connection and try again.</string>
    <string name="no_file">File:</string>
    <string name="no_file_msg">is missed on VK server, skip it.</string>
    <string name="file_huge_size_msg">is too huge by size, skip it.</string>
    <string name="file_huge_length_msg">is too huge by length, skip it.</string>
    <string name="wall">Wall music</string>
    <string name="refreshing">Refreshing...</string>
    <string name="prefs_aus">Automatic synchronization</string>
    <string name="prefs_aus_summary">All new songs in your main list from this moment will be synced with your device autommatically, include adding new or deleting existed old.</string>
    <string name="prefs_aus_summary_enabled">Songs in your main list is automatically syncing now, enjoy.</string>
    <string name="prefs_aus_freq">Update frequency</string>
    <string name="prefs_aus_wifi">Update only with wifi</string>
    <string name="prefs_aus_wifi_summary">Saves your mobile traffic</string>
    <string name="prefs_aus_freq_default_value">3600000</string>
    <string-array name="prefs_aus_freq_entry_values">
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>10800000</item>
    </string-array>
    <string-array name="prefs_aus_freq_values">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
    </string-array>
    <string name="prefs_skip_big">Prevent huge tracks from downloading</string>
    <string name="prefs_skip_big_summary">Huge tracks by size or length will never be downloaded, include automatic synchronization</string>
    <string name="prefs_skip_big_size">Max size of tracks which can be downloaded</string>
    <string name="prefs_skip_big_size_default_value">31457280</string>
    <string-array name="prefs_skip_big_size_entry_values">
        <item>20971520</item>
        <item>31457280</item>
        <item>52428800</item>
        <item>104857600</item>
    </string-array>
    <string-array name="prefs_skip_big_size_values">
        <item>20 Mb</item>
        <item>30 Mb</item>
        <item>50 Mb</item>
        <item>100 Mb</item>
    </string-array>
    <string name="prefs_skip_big_length">Max length of tracks which can be downloaded</string>
    <string name="prefs_skip_big_length_default_value">900</string>
    <string-array name="prefs_skip_big_length_entry_values">
        <item>600</item>
        <item>900</item>
        <item>1200</item>
        <item>1800</item>
    </string-array>
    <string-array name="prefs_skip_big_length_values">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string name="prefs_notify_result">Notify with sound about dm</string>
    <string name="prefs_notify_result_summary">After download job you will get notification about result, include from automatic synchronization with number of deleting.</string>
    <string name="notify_deleted">Deleted:</string>
</resources>