<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/downloading" >
        <Preference
            android:key="preference_folder"
            android:title="@string/download_direcotry" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_aus" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_automatic_synchronization"
            android:summary="@string/prefs_aus_summary"
            android:title="@string/prefs_aus" />
        <ListPreference
            android:defaultValue="@string/prefs_aus_freq_default_value"
            android:dialogTitle="@string/prefs_aus_freq"
            android:entries="@array/prefs_aus_freq_values"
            android:entryValues="@array/prefs_aus_freq_entry_values"
            android:key="preference_automatic_synchronization_frequency"
            android:title="@string/prefs_aus_freq" />
         <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_automatic_synchronization_wifi"
            android:summary="@string/prefs_aus_wifi_summary"
            android:title="@string/prefs_aus_wifi" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/imageloader" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_imageloader_pause_on_scroll"
            android:summary="@string/imageloader_pause_scroll_summary"
            android:title="@string/imageloader_pause_scroll" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_imageloader_pause_on_fling"
            android:summary="@string/imageloader_pause_fling_summary"
            android:title="@string/imageloader_pause_fling" />

        <Preference
            android:key="preference_imageloader_clear_cache"
            android:title="@string/imageloader_clear_cache" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account" >
        <Preference
            android:key="preference_logout"
            android:title="@string/logout" />
    </PreferenceCategory>

</PreferenceScreen>