<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/buy_title_dialog"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/apptheme_color" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:scaleType="fitXY"
        android:src="@color/apptheme_color" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <RelativeLayout
        android:id="@+id/buy_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/list_selector_holo_light" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/TextView06"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/buy"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView05"
            android:layout_alignRight="@+id/TextView05"
            android:layout_below="@+id/TextView05"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/buy_summary"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/slider_menu_custom_text_color"
            android:textColorHint="@color/slider_menu_custom_text_color"
            android:textColorLink="@color/slider_menu_custom_text_color"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/TextView06"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/TextView04"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/logo_google_play" />

    </RelativeLayout>

</LinearLayout>

</LinearLayout>




